# 20241003_rust-on-bare-metal

./: Cargo.toml  README.md
docs/: 01_INSTALL_RUST_VSCODE.md  02_INSTALL_BARE_METAL_TOOLS.md  03_CREATE_BARE_METAL_PROJECT.md  04_PROGRAM_LED_PROJECT.md  05_IMPROVED_LED_PROJECT.md  06_DEBUG_LED_PROJECT.md
projects/01_hello_microbit/: Cargo.toml
projects/01_hello_microbit/src/: main.rs
projects/02_led_microbit/: Cargo.toml
projects/02_led_microbit/.cargo/: config.toml
projects/02_led_microbit/src/: main.rs
projects/03_led_microbit_improved/: Cargo.toml
projects/04_debug_led_microbit/: Cargo.toml  Embed.toml
projects/04_debug_led_microbit/src/: main.rs
projects/05_button_press_microbit/: Cargo.toml
projects/05_button_press_microbit/src/: main.rs
projects/06_microbit_send_string/: Cargo.toml
projects/06_microbit_send_string/src/: main.rs
projects/07_microbit_echo_server/: Cargo.toml
projects/07_microbit_echo_server/src/: main.rs
projects/08_microbit_reverse_string/: Cargo.toml
projects/08_microbit_reverse_string/src/: main.rs
projects/09_snake_microbit/: Cargo.toml
projects/09_snake_microbit/src/: control.rs  display.rs  game.rs  main.rs
projects/10_alloc_microbit/: Cargo.toml  README.md
projects/10_alloc_microbit/src/: main.rs
