[package]
name = "button_press_microbit"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.5.0" }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
microbit-v2 = "0.15.1"
