[package]
name = "snake_microbit"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
heapless = "0.8.0"
microbit-v2 = "0.15.1"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.5.0" }
tiny-led-matrix = "=1.0.2"
